@@ -26,6 +26,7 @@ template <typename Class>
 class Constructor_Base {
 public:
     virtual Class* get_new( SEXP* args, int nargs ) = 0 ;
+    virtual int nargs() = 0 ;
 } ;
 
 template <typename Class>
@@ -34,12 +35,14 @@ public:
     virtual Class* get_new( SEXP* args, int nargs ){
 	return new Class ;
     }
+    virtual int nargs(){ return 0 ; }
 } ;
 template <typename Class, typename U0>
 class Constructor_1 : public Constructor_Base<Class>{
     virtual Class* get_new( SEXP* args, int nargs ){
         return new Class( as<U0>(args[0]) ) ;
     }
+    virtual int nargs(){ return 1 ; }
 } ;
 template <typename Class, typename U0, typename U1>
 class Constructor_2 : public Constructor_Base<Class>{
@@ -49,6 +52,7 @@ class Constructor_2 : public Constructor_Base<Class>{
             as<U1>(args[1]) 
             ) ;
     }
+    virtual int nargs(){ return 2 ; }
 } ;
 
 struct init_0 {};
